# ClearBudget

./: .coveragerc  .flake8  .gitignore  ARCHITECTURE.md  DEVELOPMENT-README.md  README.md  build_flatpak.sh  build_utils.py  builddmg.py  buildexe.py  buildinstaller.py  cleanup_flatpak.sh  create_icon.py  create_icons.py  dmg_icon.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  stamp_version.py  test_add_bill.py  test_functionality.py
clear_budget/: __init__.py  version.py
clear_budget/auth/: __init__.py  models.py  user_store.py  viewer_package.py
clear_budget/infrastructure/: __init__.py
clear_budget/shared/: config.py  currency.py  db_validation.py  errors.py  resources.py
clear_budget/ui/: __init__.py  _dark_theme_controls.py  _main_window_menus.py  dark_theme.py  main_window.py  ui_paths.py  ui_scale.py
docs/: download.html  index.html  robots.txt  site.webmanifest  sitemap.xml  styles.css  why.html
installer/: __init__.py  app.py  build_payload.py  constants.py
installer/ops/: errors.py  install_ops.py  legacy.py  repair_ops.py  running_app.py  shortcuts.py  uninstall_ops.py
installer/payload/: manifest.json
installer/shared/: logging_setup.py
installer/state/: registry.py
installer/ui/: _main_window_actions.py  _main_window_build.py  _main_window_uninstall.py  icons.py  lgpl3_license_text.py  main_window.py
models/: database.py  month.py
services/: solvency_calculator.py
tests/: conftest.py
tests/application/: __init__.py  fakes.py  test_bill_end.py  test_budget_service.py  test_reset_budget.py  (+10 more)
ui/: main_window.py
(+135 files in other folders)
